--- a/backend/.env.development
+++ b/backend/.env.development
@@ -1,8 +1,8 @@
 # Google Maps API Key
-GOOGLE_MAP_API_KEY=AIzaSyAQXHZ6CflyU0tWOAX-_qC7ugo9OmqU9ek
+GOOGLE_MAP_API_KEY=key
 
 # Mistral API Key
-MISTRAL_API_KEY=aWqnwbyJwfc9mYLpFAdTlu5hdAZxEvKj
+MISTRAL_API_KEY=key
 
 # Server Port
 PORT=3001
